added new enums